# ShiftOptimization

./: .gitignore  Dockerfile  Dockerfile.cloud  README.md  docker-compose.yaml  entrypoint.sh  main.py  model.py  optimizer.py  pyproject.toml  requirement.txt
api/: db.py  main.py  migrate_cloud_db.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/optimizers/: optimizer.py  pydantic_test.ipynb
api/routers/: done.py  optimize.py  task.py
api/schemas/: optimize.py  task.py
docs/: Docker環境構築.md  不具合.md  参考文献.md  実行手順.md
experiments/fastapi_practice/: create_table.sql  main.py  model.py
experiments/optimize_practice/: data_analyse.ipynb  sample.csv
tests/: test_main.py
